# GD32F450-EtherNet--100M-Mii-RMii-LwIP-UDP--FreeRTOS-ArmGcc-OpenOCD

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md
cmake/: toolchain.cmake
config/: FreeRTOSConfig.h  app_config.h  lwipopts.h
docs/: architecture.md  bootloader_design.md  build_config.md  build_flash_guide.md  development_plan.md  ethernet_guide.md  fix_record_2026-05-27.md  gd32_vs_stm32.md  porting_guide.md  requirements.md  toolchain_setup.md
download/gd32f4xx_firmware_library_gcc_makefile/LCD_MCU_LiangShanPi/Hardware/LCD/: lcd.c
download/gd32f4xx_firmware_library_gcc_makefile/LCD_MCU_LiangShanPi/User/: gd32f4xx_it.c  main.c
download/gd32f4xx_firmware_library_gcc_makefile/LCD_TOUCH_MCU_LiangShanPi/Hardware/LCD/: lcd.h
download/gd32f4xx_firmware_library_gcc_makefile/LCD_TOUCH_MCU_LiangShanPi/Hardware/key/: key.c
download/gd32f4xx_firmware_library_gcc_makefile/LCD_TOUCH_MCU_LiangShanPi/User/: main.c
download/gd32f4xx_firmware_library_gcc_makefile/User/: main.c
linker/: gd32f450_flash.ld
scripts/: ota_tool.py
scripts/gdb/: gdbinit
scripts/openocd/: gd32f4x_daplink.cfg  gd32f4x_jlink.cfg
src/: main.c
src/app/boot/: boot.c  boot.h
src/app/demo/: udp_echo.c  udp_echo.h
src/app/ota/: ota.c  ota.h
src/bsp/: board.c  board.h  bsp_led.c  bsp_led.h
src/drivers/eth/: eth_mac.c  eth_mac.h  ethernetif.c  ethernetif.h  phy.h  phy_dp83848.c  phy_lan8720.c
src/drivers/flash/: flash_if.c  flash_if.h
src/drivers/timer/: systick_rtos.c  systick_rtos.h
src/drivers/uart/: uart_console.c  uart_console.h
src/middleware/lwip/include/arch/: cc.h  cpu.h  sys_arch.h
src/middleware/shell/: cli.c  cli.h  cli_cmds.c  cli_cmds_ext.h
src/utils/: assert.c  assert.h  crc32.c  crc32.h  log.c  log.h  ringbuf.c  ringbuf.h
tests/unit/: test_boot.c  test_crc32.c  test_ota.c  test_ringbuf.c
